@@ -17,6 +17,10 @@ o Fixed a Traceroute bug relating to scanning through the localhost
   interface on Windows (which previously caused a crash).  Thanks to
   Alan Jones for the report and Eddie Bell for the fix.
 
+o Fixed a traceroute bug related to tracing between interfaces of a
+  multi-homed host.  Thanks to David Fifield for reporting the problem
+  and Eddie Bell for the fix.
+
 o Updated IANA assignment IP list for random IP (-iR) generation. [Kris]
 
 4.21ALPHA4
